[add] top-menu, main, bottom-menu with basic css styling

--- a/index.html
+++ b/index.html
@@ -5,9 +5,19 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="assets/css/style.css">
-    <title>Document</title>
+    <title>Zoom</title>
   </head>
   <body>
-    
+    <div class="top-menu">
+
+    </div>
+
+    <main>
+      
+    </main>
+
+    <div class="bottom-menu">
+
+    </div>
   </body>
 </html>
