--- a/index.html
+++ b/index.html
@@ -4,12 +4,19 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- Fontawesome -->
+    <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css' integrity='sha512-SzlrxWUlpfuzQ+pcUCosxcglQRNAq/DZjVsC0lE40xsADsfeQoEypE+enwcOiGjk/bSuGGKHEyjSoQ1zVisanQ==' crossorigin='anonymous'/>
+    <!-- Custom Styling -->
     <link rel="stylesheet" href="assets/css/style.css">
     <title>Zoom</title>
   </head>
-  <body>
-    <div class="top-menu">
 
+  <body>
+    <div class="top-menu relative">
+      <div class="top-btn-container absolute">
+        <a href="#"><i class="fa-solid fa-grip"></i>Speaker view</a>
+        <a href="#"><i class="fa-solid fa-maximize"></i></a>
+      </div>
     </div>
 
     <main>
