[add] user layout [add] styling in css to user

--- a/index.html
+++ b/index.html
@@ -20,7 +20,12 @@
     </div>
 
     <main>
-      
+      <div class="container flex-container flex-wrap">
+        <div class="user relative">
+          <img class="w-100" src="http://placebeard.it/640/480" alt="User" title="User">
+          <span class="name absolute"><i class="fa-solid fa-microphone-slash"></i>pinco pallo</span>
+        </div>
+      </div>
     </main>
 
     <div class="bottom-menu">
