--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- Google Fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700;900&display=swap" rel="stylesheet">
     <!-- Fontawesome -->
     <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css' integrity='sha512-SzlrxWUlpfuzQ+pcUCosxcglQRNAq/DZjVsC0lE40xsADsfeQoEypE+enwcOiGjk/bSuGGKHEyjSoQ1zVisanQ==' crossorigin='anonymous'/>
     <!-- Custom Styling -->
@@ -20,7 +24,143 @@
     </div>
 
     <main>
-      <div class="container flex-container flex-wrap">
+      <div class="container flex-container flex-wrap justify-content">
+        <div class="user relative">
+          <img class="w-100" src="http://placebeard.it/640/480" alt="User" title="User">
+          <span class="name absolute"><i class="fa-solid fa-microphone-slash"></i>pinco pallo</span>
+        </div>
+        <div class="user relative">
+          <img class="w-100" src="http://placebeard.it/640/480" alt="User" title="User">
+          <span class="name absolute"><i class="fa-solid fa-microphone-slash"></i>pinco pallo</span>
+        </div>
+        <div class="user relative">
+          <img class="w-100" src="http://placebeard.it/640/480" alt="User" title="User">
+          <span class="name absolute"><i class="fa-solid fa-microphone-slash"></i>pinco pallo</span>
+        </div>
+        <div class="user relative">
+          <img class="w-100" src="http://placebeard.it/640/480" alt="User" title="User">
+          <span class="name absolute"><i class="fa-solid fa-microphone-slash"></i>pinco pallo</span>
+        </div>
+        <div class="user relative">
+          <img class="w-100" src="http://placebeard.it/640/480" alt="User" title="User">
+          <span class="name absolute"><i class="fa-solid fa-microphone-slash"></i>pinco pallo</span>
+        </div>
+        <div class="user relative">
+          <img class="w-100" src="http://placebeard.it/640/480" alt="User" title="User">
+          <span class="name absolute"><i class="fa-solid fa-microphone-slash"></i>pinco pallo</span>
+        </div>
+        <div class="user relative">
+          <img class="w-100" src="http://placebeard.it/640/480" alt="User" title="User">
+          <span class="name absolute"><i class="fa-solid fa-microphone-slash"></i>pinco pallo</span>
+        </div>
+        <div class="user relative">
+          <img class="w-100" src="http://placebeard.it/640/480" alt="User" title="User">
+          <span class="name absolute"><i class="fa-solid fa-microphone-slash"></i>pinco pallo</span>
+        </div>
+        <div class="user relative">
+          <img class="w-100" src="http://placebeard.it/640/480" alt="User" title="User">
+          <span class="name absolute"><i class="fa-solid fa-microphone-slash"></i>pinco pallo</span>
+        </div>
+        <div class="user relative">
+          <img class="w-100" src="http://placebeard.it/640/480" alt="User" title="User">
+          <span class="name absolute"><i class="fa-solid fa-microphone-slash"></i>pinco pallo</span>
+        </div>
+        <div class="user relative">
+          <img class="w-100" src="http://placebeard.it/640/480" alt="User" title="User">
+          <span class="name absolute"><i class="fa-solid fa-microphone-slash"></i>pinco pallo</span>
+        </div>
+        <div class="user relative">
+          <img class="w-100" src="http://placebeard.it/640/480" alt="User" title="User">
+          <span class="name absolute"><i class="fa-solid fa-microphone-slash"></i>pinco pallo</span>
+        </div>
+        <div class="user relative">
+          <img class="w-100" src="http://placebeard.it/640/480" alt="User" title="User">
+          <span class="name absolute"><i class="fa-solid fa-microphone-slash"></i>pinco pallo</span>
+        </div>
+        <div class="user relative">
+          <img class="w-100" src="http://placebeard.it/640/480" alt="User" title="User">
+          <span class="name absolute"><i class="fa-solid fa-microphone-slash"></i>pinco pallo</span>
+        </div>
+        <div class="user relative">
+          <img class="w-100" src="http://placebeard.it/640/480" alt="User" title="User">
+          <span class="name absolute"><i class="fa-solid fa-microphone-slash"></i>pinco pallo</span>
+        </div>
+        <div class="user relative">
+          <img class="w-100" src="http://placebeard.it/640/480" alt="User" title="User">
+          <span class="name absolute"><i class="fa-solid fa-microphone-slash"></i>pinco pallo</span>
+        </div>
+        <div class="user relative">
+          <img class="w-100" src="http://placebeard.it/640/480" alt="User" title="User">
+          <span class="name absolute"><i class="fa-solid fa-microphone-slash"></i>pinco pallo</span>
+        </div>
+        <div class="user relative">
+          <img class="w-100" src="http://placebeard.it/640/480" alt="User" title="User">
+          <span class="name absolute"><i class="fa-solid fa-microphone-slash"></i>pinco pallo</span>
+        </div>
+        <div class="user relative">
+          <img class="w-100" src="http://placebeard.it/640/480" alt="User" title="User">
+          <span class="name absolute"><i class="fa-solid fa-microphone-slash"></i>pinco pallo</span>
+        </div>
+        <div class="user relative">
+          <img class="w-100" src="http://placebeard.it/640/480" alt="User" title="User">
+          <span class="name absolute"><i class="fa-solid fa-microphone-slash"></i>pinco pallo</span>
+        </div>
+        <div class="user relative">
+          <img class="w-100" src="http://placebeard.it/640/480" alt="User" title="User">
+          <span class="name absolute"><i class="fa-solid fa-microphone-slash"></i>pinco pallo</span>
+        </div>
+        <div class="user relative">
+          <img class="w-100" src="http://placebeard.it/640/480" alt="User" title="User">
+          <span class="name absolute"><i class="fa-solid fa-microphone-slash"></i>pinco pallo</span>
+        </div>
+        <div class="user relative">
+          <img class="w-100" src="http://placebeard.it/640/480" alt="User" title="User">
+          <span class="name absolute"><i class="fa-solid fa-microphone-slash"></i>pinco pallo</span>
+        </div>
+        <div class="user relative">
+          <img class="w-100" src="http://placebeard.it/640/480" alt="User" title="User">
+          <span class="name absolute"><i class="fa-solid fa-microphone-slash"></i>pinco pallo</span>
+        </div>
+        <div class="user relative">
+          <img class="w-100" src="http://placebeard.it/640/480" alt="User" title="User">
+          <span class="name absolute"><i class="fa-solid fa-microphone-slash"></i>pinco pallo</span>
+        </div>
+        <div class="user relative">
+          <img class="w-100" src="http://placebeard.it/640/480" alt="User" title="User">
+          <span class="name absolute"><i class="fa-solid fa-microphone-slash"></i>pinco pallo</span>
+        </div>
+        <div class="user relative">
+          <img class="w-100" src="http://placebeard.it/640/480" alt="User" title="User">
+          <span class="name absolute"><i class="fa-solid fa-microphone-slash"></i>pinco pallo</span>
+        </div>
+        <div class="user relative">
+          <img class="w-100" src="http://placebeard.it/640/480" alt="User" title="User">
+          <span class="name absolute"><i class="fa-solid fa-microphone-slash"></i>pinco pallo</span>
+        </div>
+        <div class="user relative">
+          <img class="w-100" src="http://placebeard.it/640/480" alt="User" title="User">
+          <span class="name absolute"><i class="fa-solid fa-microphone-slash"></i>pinco pallo</span>
+        </div>
+        <div class="user relative">
+          <img class="w-100" src="http://placebeard.it/640/480" alt="User" title="User">
+          <span class="name absolute"><i class="fa-solid fa-microphone-slash"></i>pinco pallo</span>
+        </div>
+        <div class="user relative">
+          <img class="w-100" src="http://placebeard.it/640/480" alt="User" title="User">
+          <span class="name absolute"><i class="fa-solid fa-microphone-slash"></i>pinco pallo</span>
+        </div>
+        <div class="user relative">
+          <img class="w-100" src="http://placebeard.it/640/480" alt="User" title="User">
+          <span class="name absolute"><i class="fa-solid fa-microphone-slash"></i>pinco pallo</span>
+        </div>
+        <div class="user relative">
+          <img class="w-100" src="http://placebeard.it/640/480" alt="User" title="User">
+          <span class="name absolute"><i class="fa-solid fa-microphone-slash"></i>pinco pallo</span>
+        </div>
+        <div class="user relative">
+          <img class="w-100" src="http://placebeard.it/640/480" alt="User" title="User">
+          <span class="name absolute"><i class="fa-solid fa-microphone-slash"></i>pinco pallo</span>
+        </div>
         <div class="user relative">
           <img class="w-100" src="http://placebeard.it/640/480" alt="User" title="User">
           <span class="name absolute"><i class="fa-solid fa-microphone-slash"></i>pinco pallo</span>
@@ -28,8 +168,31 @@
       </div>
     </main>
 
-    <div class="bottom-menu">
-
+    <div class="bottom-menu flex-container space-between align-items">
+      <div class="left-content">
+        <div class="icon-layout flex-container align-items">
+          <div class="mute-icon flex-container column align-items justify-content">
+            <span class="icon"><i class="fa-solid fa-microphone"></i></span>
+            <span class="icon description">Mute</span>
+          </div>
+          <div class="selector">
+            <i class="fa-solid fa-angle-up"></i>
+          </div>
+          <div class="mute-icon flex-container column align-items justify-content">
+            <span class="icon"><i class="fa-solid fa-video"></i></span>
+            <span class="icon description">Stop Video</span>
+          </div>
+          <div class="selector">
+            <i class="fa-solid fa-angle-up"></i>
+          </div>
+        </div>
+      </div>
+      <div class="center-content justify-content">
+        
+      </div>
+      <div class="right-content h-100">
+        <button>End meeting</button>
+      </div>
     </div>
   </body>
 </html>
