--- a/index.html
+++ b/index.html
@@ -169,27 +169,61 @@
     </main>
 
     <div class="bottom-menu flex-container space-between align-items">
-      <div class="left-content">
-        <div class="icon-layout flex-container align-items">
-          <div class="mute-icon flex-container column align-items justify-content">
-            <span class="icon"><i class="fa-solid fa-microphone"></i></span>
-            <span class="icon description">Mute</span>
-          </div>
-          <div class="selector">
-            <i class="fa-solid fa-angle-up"></i>
-          </div>
-          <div class="mute-icon flex-container column align-items justify-content">
-            <span class="icon"><i class="fa-solid fa-video"></i></span>
-            <span class="icon description">Stop Video</span>
-          </div>
-          <div class="selector">
-            <i class="fa-solid fa-angle-up"></i>
-          </div>
+      <div class="left-content flex-container">
+        <div class="flex-container column align-items justify-content">
+          <a href="#" class="icon"><i class="fa-solid fa-microphone"></i></a>
+          <a href="#" class="icon description">Mute</a>
+        </div>
+        <div class="selector">
+          <a href=""><i class="fa-solid fa-angle-up"></i></a>
+        </div>
+        <div class="flex-container column align-items justify-content">
+          <a href="#" class="icon"><i class="fa-solid fa-video"></i></a>
+          <a href="#" class="icon description">Stop video</a>
+        </div>
+        <div class="selector">
+          <a href="#"><i class="fa-solid fa-angle-up"></i></a>
         </div>
       </div>
-      <div class="center-content justify-content">
-        
+
+      <div class="center-content flex-container">
+        <div class="icon-container flex-container column align-items justify-content">
+          <a href="#" class="icon"><i id="not-center" class="fa-solid fa-user-plus"></i></a>
+          <a href="#" class="icon description">Invite</a>
+        </div>
+        <div class="icon-container flex-container column align-items justify-content">
+          <a href="#" class="icon"><i class="fa-solid fa-user-group"></i></a>
+          <a href="#" class="icon description">Manage participants</a>
+        </div>
+        <div class="icon-container flex-container column align-items justify-content">
+          <a href="#" class="icon"><i class="fa-solid fa-chart-column"></i></a>
+          <a href="#" class="icon description">Pooling</a>
+        </div>
+        <div class="icon-container flex-container column align-items justify-content">
+          <a href="#" class="icon"><i id="screen-share" class="fa-solid fa-share-from-square"></i></a>
+          <a href="#" class="icon description">Share screen</a>
+        </div>
+        <div class="selector">
+          <a href="#"><i class="fa-solid fa-angle-up"></i></a>
+        </div>
+        <div class="icon-container flex-container column align-items justify-content">
+          <a href="#" class="icon"><i class="fa-solid fa-comment"></i></a>
+          <a href="#" class="icon description">Comment</a>
+        </div>
+        <div class="icon-container flex-container column align-items justify-content">
+          <a href="#" class="icon"><i class="fa-solid fa-record-vinyl"></i></a>
+          <a href="#" class="icon description">Record</a>
+        </div>
+        <div class="icon-container flex-container column align-items justify-content">
+          <a href="#" class="icon"><i class="fa-solid fa-table-cells-large"></i></a>
+          <a href="#" class="icon description">Breakout rooms</a>
+        </div>
+        <div class="icon-container flex-container column align-items justify-content">
+          <a href="#" class="icon"><i class="fa-solid fa-ellipsis"></i></a>
+          <a href="#" class="icon description">More</a>
+        </div>
       </div>
+
       <div class="right-content h-100">
         <button>End meeting</button>
       </div>
