[add] bonus feature in css

--- a/index.html
+++ b/index.html
@@ -169,17 +169,19 @@
     </main>
 
     <div class="bottom-menu flex-container space-between align-items">
+
       <div class="left-content flex-container">
         <div class="flex-container column align-items justify-content">
           <a href="#" class="icon"><i class="fa-solid fa-microphone"></i></a>
-          <a href="#" class="icon description">Mute</a>
+          <span class="icon description">Mute</span>
         </div>
         <div class="selector">
           <a href=""><i class="fa-solid fa-angle-up"></i></a>
         </div>
+
         <div class="flex-container column align-items justify-content">
           <a href="#" class="icon"><i class="fa-solid fa-video"></i></a>
-          <a href="#" class="icon description">Stop video</a>
+          <span class="icon description">Stop video</span>
         </div>
         <div class="selector">
           <a href="#"><i class="fa-solid fa-angle-up"></i></a>
@@ -187,40 +189,48 @@
       </div>
 
       <div class="center-content flex-container">
+
         <div class="icon-container flex-container column align-items justify-content">
           <a href="#" class="icon"><i id="not-center" class="fa-solid fa-user-plus"></i></a>
-          <a href="#" class="icon description">Invite</a>
+          <span class="icon description">Invite</span>
         </div>
+
         <div class="icon-container flex-container column align-items justify-content">
           <a href="#" class="icon"><i class="fa-solid fa-user-group"></i></a>
-          <a href="#" class="icon description">Manage participants</a>
+          <span class="icon description">Manage participants</span>
         </div>
+
         <div class="icon-container flex-container column align-items justify-content">
           <a href="#" class="icon"><i class="fa-solid fa-chart-column"></i></a>
-          <a href="#" class="icon description">Pooling</a>
+          <span class="icon description">Pooling</span>
         </div>
+
         <div class="icon-container flex-container column align-items justify-content">
           <a href="#" class="icon"><i id="screen-share" class="fa-solid fa-share-from-square"></i></a>
-          <a href="#" class="icon description">Share screen</a>
+          <span class="icon description">Share screen</span>
         </div>
         <div class="selector">
           <a href="#"><i class="fa-solid fa-angle-up"></i></a>
         </div>
+
         <div class="icon-container flex-container column align-items justify-content">
           <a href="#" class="icon"><i class="fa-solid fa-comment"></i></a>
-          <a href="#" class="icon description">Comment</a>
+          <span class="icon description">Comment</span>
         </div>
+
         <div class="icon-container flex-container column align-items justify-content">
           <a href="#" class="icon"><i class="fa-solid fa-record-vinyl"></i></a>
-          <a href="#" class="icon description">Record</a>
+          <span class="icon description">Record</span>
         </div>
+
         <div class="icon-container flex-container column align-items justify-content">
           <a href="#" class="icon"><i class="fa-solid fa-table-cells-large"></i></a>
-          <a href="#" class="icon description">Breakout rooms</a>
+          <span class="icon description">Breakout rooms</span>
         </div>
+
         <div class="icon-container flex-container column align-items justify-content">
           <a href="#" class="icon"><i class="fa-solid fa-ellipsis"></i></a>
-          <a href="#" class="icon description">More</a>
+          <span class="icon description">More</span>
         </div>
       </div>
 
