--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
   </head>
 
   <body>
+    <!-- Menù top -->
     <div class="top-menu relative">
       <div class="top-btn-container absolute">
         <a href="#"><i class="fa-solid fa-grip"></i>Speaker view</a>
@@ -23,8 +24,11 @@
       </div>
     </div>
 
+    <!-- Main -->
     <main>
+      <!-- Container -->
       <div class="container flex-container flex-wrap justify-content">
+        <!-- Immagine utente con nome e stato microfono -->
         <div class="user relative">
           <img class="w-100" src="http://placebeard.it/640/480" alt="User" title="User">
           <span class="name absolute"><i class="fa-solid fa-microphone-slash"></i>pinco pallo</span>
@@ -33,210 +37,263 @@
           <img class="w-100" src="http://placebeard.it/640/480" alt="User" title="User">
           <span class="name absolute"><i class="fa-solid fa-microphone-slash"></i>pinco pallo</span>
         </div>
+
         <div class="user relative">
           <img class="w-100" src="http://placebeard.it/640/480" alt="User" title="User">
           <span class="name absolute"><i class="fa-solid fa-microphone-slash"></i>pinco pallo</span>
         </div>
+
         <div class="user relative">
           <img class="w-100" src="http://placebeard.it/640/480" alt="User" title="User">
           <span class="name absolute"><i class="fa-solid fa-microphone-slash"></i>pinco pallo</span>
         </div>
+
         <div class="user relative">
           <img class="w-100" src="http://placebeard.it/640/480" alt="User" title="User">
           <span class="name absolute"><i class="fa-solid fa-microphone-slash"></i>pinco pallo</span>
         </div>
+
         <div class="user relative">
           <img class="w-100" src="http://placebeard.it/640/480" alt="User" title="User">
           <span class="name absolute"><i class="fa-solid fa-microphone-slash"></i>pinco pallo</span>
         </div>
+
         <div class="user relative">
           <img class="w-100" src="http://placebeard.it/640/480" alt="User" title="User">
           <span class="name absolute"><i class="fa-solid fa-microphone-slash"></i>pinco pallo</span>
         </div>
+
         <div class="user relative">
           <img class="w-100" src="http://placebeard.it/640/480" alt="User" title="User">
           <span class="name absolute"><i class="fa-solid fa-microphone-slash"></i>pinco pallo</span>
         </div>
+
         <div class="user relative">
           <img class="w-100" src="http://placebeard.it/640/480" alt="User" title="User">
           <span class="name absolute"><i class="fa-solid fa-microphone-slash"></i>pinco pallo</span>
         </div>
+
         <div class="user relative">
           <img class="w-100" src="http://placebeard.it/640/480" alt="User" title="User">
           <span class="name absolute"><i class="fa-solid fa-microphone-slash"></i>pinco pallo</span>
         </div>
+
         <div class="user relative">
           <img class="w-100" src="http://placebeard.it/640/480" alt="User" title="User">
           <span class="name absolute"><i class="fa-solid fa-microphone-slash"></i>pinco pallo</span>
         </div>
+
         <div class="user relative">
           <img class="w-100" src="http://placebeard.it/640/480" alt="User" title="User">
           <span class="name absolute"><i class="fa-solid fa-microphone-slash"></i>pinco pallo</span>
         </div>
+
         <div class="user relative">
           <img class="w-100" src="http://placebeard.it/640/480" alt="User" title="User">
           <span class="name absolute"><i class="fa-solid fa-microphone-slash"></i>pinco pallo</span>
         </div>
+
         <div class="user relative">
           <img class="w-100" src="http://placebeard.it/640/480" alt="User" title="User">
           <span class="name absolute"><i class="fa-solid fa-microphone-slash"></i>pinco pallo</span>
         </div>
+
         <div class="user relative">
           <img class="w-100" src="http://placebeard.it/640/480" alt="User" title="User">
           <span class="name absolute"><i class="fa-solid fa-microphone-slash"></i>pinco pallo</span>
         </div>
+
         <div class="user relative">
           <img class="w-100" src="http://placebeard.it/640/480" alt="User" title="User">
           <span class="name absolute"><i class="fa-solid fa-microphone-slash"></i>pinco pallo</span>
         </div>
+
         <div class="user relative">
           <img class="w-100" src="http://placebeard.it/640/480" alt="User" title="User">
           <span class="name absolute"><i class="fa-solid fa-microphone-slash"></i>pinco pallo</span>
         </div>
+
         <div class="user relative">
           <img class="w-100" src="http://placebeard.it/640/480" alt="User" title="User">
           <span class="name absolute"><i class="fa-solid fa-microphone-slash"></i>pinco pallo</span>
         </div>
+
         <div class="user relative">
           <img class="w-100" src="http://placebeard.it/640/480" alt="User" title="User">
           <span class="name absolute"><i class="fa-solid fa-microphone-slash"></i>pinco pallo</span>
         </div>
+
         <div class="user relative">
           <img class="w-100" src="http://placebeard.it/640/480" alt="User" title="User">
           <span class="name absolute"><i class="fa-solid fa-microphone-slash"></i>pinco pallo</span>
         </div>
+
         <div class="user relative">
           <img class="w-100" src="http://placebeard.it/640/480" alt="User" title="User">
           <span class="name absolute"><i class="fa-solid fa-microphone-slash"></i>pinco pallo</span>
         </div>
+
         <div class="user relative">
           <img class="w-100" src="http://placebeard.it/640/480" alt="User" title="User">
           <span class="name absolute"><i class="fa-solid fa-microphone-slash"></i>pinco pallo</span>
         </div>
+
         <div class="user relative">
           <img class="w-100" src="http://placebeard.it/640/480" alt="User" title="User">
           <span class="name absolute"><i class="fa-solid fa-microphone-slash"></i>pinco pallo</span>
         </div>
+
         <div class="user relative">
           <img class="w-100" src="http://placebeard.it/640/480" alt="User" title="User">
           <span class="name absolute"><i class="fa-solid fa-microphone-slash"></i>pinco pallo</span>
         </div>
+
         <div class="user relative">
           <img class="w-100" src="http://placebeard.it/640/480" alt="User" title="User">
           <span class="name absolute"><i class="fa-solid fa-microphone-slash"></i>pinco pallo</span>
         </div>
+
         <div class="user relative">
           <img class="w-100" src="http://placebeard.it/640/480" alt="User" title="User">
           <span class="name absolute"><i class="fa-solid fa-microphone-slash"></i>pinco pallo</span>
         </div>
+
         <div class="user relative">
           <img class="w-100" src="http://placebeard.it/640/480" alt="User" title="User">
           <span class="name absolute"><i class="fa-solid fa-microphone-slash"></i>pinco pallo</span>
         </div>
+
         <div class="user relative">
           <img class="w-100" src="http://placebeard.it/640/480" alt="User" title="User">
           <span class="name absolute"><i class="fa-solid fa-microphone-slash"></i>pinco pallo</span>
         </div>
+
         <div class="user relative">
           <img class="w-100" src="http://placebeard.it/640/480" alt="User" title="User">
           <span class="name absolute"><i class="fa-solid fa-microphone-slash"></i>pinco pallo</span>
         </div>
+
         <div class="user relative">
           <img class="w-100" src="http://placebeard.it/640/480" alt="User" title="User">
           <span class="name absolute"><i class="fa-solid fa-microphone-slash"></i>pinco pallo</span>
         </div>
+
         <div class="user relative">
           <img class="w-100" src="http://placebeard.it/640/480" alt="User" title="User">
           <span class="name absolute"><i class="fa-solid fa-microphone-slash"></i>pinco pallo</span>
         </div>
+
         <div class="user relative">
           <img class="w-100" src="http://placebeard.it/640/480" alt="User" title="User">
           <span class="name absolute"><i class="fa-solid fa-microphone-slash"></i>pinco pallo</span>
         </div>
+
         <div class="user relative">
           <img class="w-100" src="http://placebeard.it/640/480" alt="User" title="User">
           <span class="name absolute"><i class="fa-solid fa-microphone-slash"></i>pinco pallo</span>
         </div>
+
         <div class="user relative">
           <img class="w-100" src="http://placebeard.it/640/480" alt="User" title="User">
           <span class="name absolute"><i class="fa-solid fa-microphone-slash"></i>pinco pallo</span>
         </div>
+
         <div class="user relative">
           <img class="w-100" src="http://placebeard.it/640/480" alt="User" title="User">
           <span class="name absolute"><i class="fa-solid fa-microphone-slash"></i>pinco pallo</span>
         </div>
       </div>
+      <!-- /Container -->
     </main>
 
+    <!-- Footer -->
     <div class="bottom-menu flex-container space-between align-items">
-
+      <!-- Left content del footer -->
       <div class="left-content flex-container">
+        <!-- Icona microfono -->
         <div class="flex-container column align-items justify-content">
           <a href="#" class="icon"><i class="fa-solid fa-microphone"></i></a>
           <span class="icon description">Mute</span>
         </div>
+        <!-- Selettore opzioni -->
         <div class="selector">
           <a href=""><i class="fa-solid fa-angle-up"></i></a>
         </div>
 
+        <!-- Icona webcam -->
         <div class="flex-container column align-items justify-content">
           <a href="#" class="icon"><i class="fa-solid fa-video"></i></a>
           <span class="icon description">Stop video</span>
         </div>
+        <!-- Selettore opzioni -->
         <div class="selector">
           <a href="#"><i class="fa-solid fa-angle-up"></i></a>
         </div>
       </div>
+      <!-- /Left content del footer -->
 
+      <!-- Center content del footer -->
       <div class="center-content flex-container">
-
+        <!-- Icona invita -->
         <div class="icon-container flex-container column align-items justify-content">
           <a href="#" class="icon"><i id="not-center" class="fa-solid fa-user-plus"></i></a>
           <span class="icon description">Invite</span>
         </div>
 
+        <!-- Icona partecipanti -->
         <div class="icon-container flex-container column align-items justify-content">
           <a href="#" class="icon"><i class="fa-solid fa-user-group"></i></a>
           <span class="icon description">Manage participants</span>
         </div>
 
+        <!-- Icona sondaggi -->
         <div class="icon-container flex-container column align-items justify-content">
           <a href="#" class="icon"><i class="fa-solid fa-chart-column"></i></a>
           <span class="icon description">Pooling</span>
         </div>
 
+        <!-- Icona condivisione schermo -->
         <div class="icon-container flex-container column align-items justify-content">
           <a href="#" class="icon"><i id="screen-share" class="fa-solid fa-share-from-square"></i></a>
           <span class="icon description">Share screen</span>
         </div>
+        <!-- Selettore opzioni -->
         <div class="selector">
           <a href="#"><i class="fa-solid fa-angle-up"></i></a>
         </div>
 
+        <!-- Icona commenti -->
         <div class="icon-container flex-container column align-items justify-content">
           <a href="#" class="icon"><i class="fa-solid fa-comment"></i></a>
           <span class="icon description">Comment</span>
         </div>
 
+        <!-- Icona registrazione -->
         <div class="icon-container flex-container column align-items justify-content">
           <a href="#" class="icon"><i class="fa-solid fa-record-vinyl"></i></a>
           <span class="icon description">Record</span>
         </div>
 
+        <!-- Icona "Breakout rooms" -->
         <div class="icon-container flex-container column align-items justify-content">
           <a href="#" class="icon"><i class="fa-solid fa-table-cells-large"></i></a>
           <span class="icon description">Breakout rooms</span>
         </div>
 
+        <!-- Icona "more" -->
         <div class="icon-container flex-container column align-items justify-content">
           <a href="#" class="icon"><i class="fa-solid fa-ellipsis"></i></a>
           <span class="icon description">More</span>
         </div>
       </div>
+      <!-- /Center content del footer -->
 
+      <!-- Right content del footer -->
       <div class="right-content h-100">
         <button>End meeting</button>
       </div>
+      <!-- /Right content del footer -->
     </div>
+    <!-- /Footer -->
   </body>
 </html>
