[add] ?random=x to image url [cahnged] .user width from calc(100%/7) to 230px

--- a/index.html
+++ b/index.html
@@ -30,176 +30,176 @@
       <div class="container flex-container flex-wrap justify-content">
         <!-- Immagine utente con nome e stato microfono -->
         <div class="user relative">
-          <img class="w-100" src="http://placebeard.it/640/480" alt="User" title="User">
+          <img class="w-100" src="http://placebeard.it/640/480?random=1" alt="User" title="User">
           <span class="name absolute"><i class="fa-solid fa-microphone-slash"></i>pinco pallo</span>
         </div>
         <div class="user relative">
-          <img class="w-100" src="http://placebeard.it/640/480" alt="User" title="User">
-          <span class="name absolute"><i class="fa-solid fa-microphone-slash"></i>pinco pallo</span>
-        </div>
-
-        <div class="user relative">
-          <img class="w-100" src="http://placebeard.it/640/480" alt="User" title="User">
+          <img class="w-100" src="http://placebeard.it/640/480?random=2" alt="User" title="User">
           <span class="name absolute"><i class="fa-solid fa-microphone-slash"></i>pinco pallo</span>
         </div>
 
         <div class="user relative">
-          <img class="w-100" src="http://placebeard.it/640/480" alt="User" title="User">
+          <img class="w-100" src="http://placebeard.it/640/480?random=3" alt="User" title="User">
           <span class="name absolute"><i class="fa-solid fa-microphone-slash"></i>pinco pallo</span>
         </div>
 
         <div class="user relative">
-          <img class="w-100" src="http://placebeard.it/640/480" alt="User" title="User">
+          <img class="w-100" src="http://placebeard.it/640/480?random=4" alt="User" title="User">
           <span class="name absolute"><i class="fa-solid fa-microphone-slash"></i>pinco pallo</span>
         </div>
 
         <div class="user relative">
-          <img class="w-100" src="http://placebeard.it/640/480" alt="User" title="User">
+          <img class="w-100" src="http://placebeard.it/640/480?random=5" alt="User" title="User">
           <span class="name absolute"><i class="fa-solid fa-microphone-slash"></i>pinco pallo</span>
         </div>
 
         <div class="user relative">
-          <img class="w-100" src="http://placebeard.it/640/480" alt="User" title="User">
+          <img class="w-100" src="http://placebeard.it/640/480?random=6" alt="User" title="User">
           <span class="name absolute"><i class="fa-solid fa-microphone-slash"></i>pinco pallo</span>
         </div>
 
         <div class="user relative">
-          <img class="w-100" src="http://placebeard.it/640/480" alt="User" title="User">
+          <img class="w-100" src="http://placebeard.it/640/480?random=7" alt="User" title="User">
           <span class="name absolute"><i class="fa-solid fa-microphone-slash"></i>pinco pallo</span>
         </div>
 
         <div class="user relative">
-          <img class="w-100" src="http://placebeard.it/640/480" alt="User" title="User">
+          <img class="w-100" src="http://placebeard.it/640/480?random=8" alt="User" title="User">
           <span class="name absolute"><i class="fa-solid fa-microphone-slash"></i>pinco pallo</span>
         </div>
 
         <div class="user relative">
-          <img class="w-100" src="http://placebeard.it/640/480" alt="User" title="User">
+          <img class="w-100" src="http://placebeard.it/640/480?random=9" alt="User" title="User">
           <span class="name absolute"><i class="fa-solid fa-microphone-slash"></i>pinco pallo</span>
         </div>
 
         <div class="user relative">
-          <img class="w-100" src="http://placebeard.it/640/480" alt="User" title="User">
+          <img class="w-100" src="http://placebeard.it/640/480?random=10" alt="User" title="User">
           <span class="name absolute"><i class="fa-solid fa-microphone-slash"></i>pinco pallo</span>
         </div>
 
         <div class="user relative">
-          <img class="w-100" src="http://placebeard.it/640/480" alt="User" title="User">
+          <img class="w-100" src="http://placebeard.it/640/480?random=11" alt="User" title="User">
           <span class="name absolute"><i class="fa-solid fa-microphone-slash"></i>pinco pallo</span>
         </div>
 
         <div class="user relative">
-          <img class="w-100" src="http://placebeard.it/640/480" alt="User" title="User">
+          <img class="w-100" src="http://placebeard.it/640/480?random=12" alt="User" title="User">
           <span class="name absolute"><i class="fa-solid fa-microphone-slash"></i>pinco pallo</span>
         </div>
 
         <div class="user relative">
-          <img class="w-100" src="http://placebeard.it/640/480" alt="User" title="User">
+          <img class="w-100" src="http://placebeard.it/640/480?random=13" alt="User" title="User">
           <span class="name absolute"><i class="fa-solid fa-microphone-slash"></i>pinco pallo</span>
         </div>
 
         <div class="user relative">
-          <img class="w-100" src="http://placebeard.it/640/480" alt="User" title="User">
+          <img class="w-100" src="http://placebeard.it/640/480?random=14" alt="User" title="User">
           <span class="name absolute"><i class="fa-solid fa-microphone-slash"></i>pinco pallo</span>
         </div>
 
         <div class="user relative">
-          <img class="w-100" src="http://placebeard.it/640/480" alt="User" title="User">
+          <img class="w-100" src="http://placebeard.it/640/480?random=15" alt="User" title="User">
           <span class="name absolute"><i class="fa-solid fa-microphone-slash"></i>pinco pallo</span>
         </div>
 
         <div class="user relative">
-          <img class="w-100" src="http://placebeard.it/640/480" alt="User" title="User">
+          <img class="w-100" src="http://placebeard.it/640/480?random=16" alt="User" title="User">
           <span class="name absolute"><i class="fa-solid fa-microphone-slash"></i>pinco pallo</span>
         </div>
 
         <div class="user relative">
-          <img class="w-100" src="http://placebeard.it/640/480" alt="User" title="User">
+          <img class="w-100" src="http://placebeard.it/640/480?random=17" alt="User" title="User">
           <span class="name absolute"><i class="fa-solid fa-microphone-slash"></i>pinco pallo</span>
         </div>
 
         <div class="user relative">
-          <img class="w-100" src="http://placebeard.it/640/480" alt="User" title="User">
+          <img class="w-100" src="http://placebeard.it/640/480?random=18" alt="User" title="User">
           <span class="name absolute"><i class="fa-solid fa-microphone-slash"></i>pinco pallo</span>
         </div>
 
         <div class="user relative">
-          <img class="w-100" src="http://placebeard.it/640/480" alt="User" title="User">
+          <img class="w-100" src="http://placebeard.it/640/480?random=19" alt="User" title="User">
           <span class="name absolute"><i class="fa-solid fa-microphone-slash"></i>pinco pallo</span>
         </div>
 
         <div class="user relative">
-          <img class="w-100" src="http://placebeard.it/640/480" alt="User" title="User">
+          <img class="w-100" src="http://placebeard.it/640/480?random=20" alt="User" title="User">
           <span class="name absolute"><i class="fa-solid fa-microphone-slash"></i>pinco pallo</span>
         </div>
 
         <div class="user relative">
-          <img class="w-100" src="http://placebeard.it/640/480" alt="User" title="User">
+          <img class="w-100" src="http://placebeard.it/640/480?random=21" alt="User" title="User">
           <span class="name absolute"><i class="fa-solid fa-microphone-slash"></i>pinco pallo</span>
         </div>
 
         <div class="user relative">
-          <img class="w-100" src="http://placebeard.it/640/480" alt="User" title="User">
+          <img class="w-100" src="http://placebeard.it/640/480?random=22" alt="User" title="User">
           <span class="name absolute"><i class="fa-solid fa-microphone-slash"></i>pinco pallo</span>
         </div>
 
         <div class="user relative">
-          <img class="w-100" src="http://placebeard.it/640/480" alt="User" title="User">
+          <img class="w-100" src="http://placebeard.it/640/480?random=23" alt="User" title="User">
           <span class="name absolute"><i class="fa-solid fa-microphone-slash"></i>pinco pallo</span>
         </div>
 
         <div class="user relative">
-          <img class="w-100" src="http://placebeard.it/640/480" alt="User" title="User">
+          <img class="w-100" src="http://placebeard.it/640/480?random=24" alt="User" title="User">
           <span class="name absolute"><i class="fa-solid fa-microphone-slash"></i>pinco pallo</span>
         </div>
 
         <div class="user relative">
-          <img class="w-100" src="http://placebeard.it/640/480" alt="User" title="User">
+          <img class="w-100" src="http://placebeard.it/640/480?random=25" alt="User" title="User">
           <span class="name absolute"><i class="fa-solid fa-microphone-slash"></i>pinco pallo</span>
         </div>
 
         <div class="user relative">
-          <img class="w-100" src="http://placebeard.it/640/480" alt="User" title="User">
+          <img class="w-100" src="http://placebeard.it/640/480?random=26" alt="User" title="User">
           <span class="name absolute"><i class="fa-solid fa-microphone-slash"></i>pinco pallo</span>
         </div>
 
         <div class="user relative">
-          <img class="w-100" src="http://placebeard.it/640/480" alt="User" title="User">
+          <img class="w-100" src="http://placebeard.it/640/480?random=27" alt="User" title="User">
           <span class="name absolute"><i class="fa-solid fa-microphone-slash"></i>pinco pallo</span>
         </div>
 
         <div class="user relative">
-          <img class="w-100" src="http://placebeard.it/640/480" alt="User" title="User">
+          <img class="w-100" src="http://placebeard.it/640/480?random=28" alt="User" title="User">
           <span class="name absolute"><i class="fa-solid fa-microphone-slash"></i>pinco pallo</span>
         </div>
 
         <div class="user relative">
-          <img class="w-100" src="http://placebeard.it/640/480" alt="User" title="User">
+          <img class="w-100" src="http://placebeard.it/640/480?random=29" alt="User" title="User">
           <span class="name absolute"><i class="fa-solid fa-microphone-slash"></i>pinco pallo</span>
         </div>
 
         <div class="user relative">
-          <img class="w-100" src="http://placebeard.it/640/480" alt="User" title="User">
+          <img class="w-100" src="http://placebeard.it/640/480?random=30" alt="User" title="User">
           <span class="name absolute"><i class="fa-solid fa-microphone-slash"></i>pinco pallo</span>
         </div>
 
         <div class="user relative">
-          <img class="w-100" src="http://placebeard.it/640/480" alt="User" title="User">
+          <img class="w-100" src="http://placebeard.it/640/480?random=31" alt="User" title="User">
           <span class="name absolute"><i class="fa-solid fa-microphone-slash"></i>pinco pallo</span>
         </div>
 
         <div class="user relative">
-          <img class="w-100" src="http://placebeard.it/640/480" alt="User" title="User">
+          <img class="w-100" src="http://placebeard.it/640/480?random=32" alt="User" title="User">
           <span class="name absolute"><i class="fa-solid fa-microphone-slash"></i>pinco pallo</span>
         </div>
 
         <div class="user relative">
-          <img class="w-100" src="http://placebeard.it/640/480" alt="User" title="User">
+          <img class="w-100" src="http://placebeard.it/640/480?random=33" alt="User" title="User">
           <span class="name absolute"><i class="fa-solid fa-microphone-slash"></i>pinco pallo</span>
         </div>
 
         <div class="user relative">
-          <img class="w-100" src="http://placebeard.it/640/480" alt="User" title="User">
+          <img class="w-100" src="http://placebeard.it/640/480?random=34" alt="User" title="User">
+          <span class="name absolute"><i class="fa-solid fa-microphone-slash"></i>pinco pallo</span>
+        </div>
+
+        <div class="user relative">
+          <img class="w-100" src="http://placebeard.it/640/480?random=35" alt="User" title="User">
           <span class="name absolute"><i class="fa-solid fa-microphone-slash"></i>pinco pallo</span>
         </div>
       </div>
