[changed] footer class names

--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
     <!-- Menù top -->
     <div class="top-menu relative">
       <div class="top-btn-container absolute">
-        <a href="#"><i class="fa-solid fa-grip"></i>Speaker view</a>
-        <a href="#"><i class="fa-solid fa-maximize"></i></a>
+        <button><i class="fa-solid fa-grip"></i>Speaker view</button>
+        <button><i class="fa-solid fa-maximize"></i></button>
       </div>
     </div>
 
@@ -210,7 +210,7 @@
     <!-- Footer -->
     <div class="bottom-menu flex-container space-between align-items">
       <!-- Left content del footer -->
-      <div class="left-content flex-container">
+      <div class="left-footer flex-container">
         <!-- Icona microfono -->
         <div class="flex-container column align-items justify-content">
           <a href="#" class="icon"><i class="fa-solid fa-microphone"></i></a>
@@ -234,7 +234,7 @@
       <!-- /Left content del footer -->
 
       <!-- Center content del footer -->
-      <div class="center-content flex-container">
+      <div class="center-footer flex-container">
         <!-- Icona invita -->
         <div class="icon-container flex-container column align-items justify-content">
           <a href="#" class="icon"><i id="not-center" class="fa-solid fa-user-plus"></i></a>
@@ -290,7 +290,7 @@
       <!-- /Center content del footer -->
 
       <!-- Right content del footer -->
-      <div class="right-content h-100">
+      <div class="right-footer h-100">
         <button>End meeting</button>
       </div>
       <!-- /Right content del footer -->
