--- a/index.html
+++ b/index.html
@@ -209,23 +209,27 @@
 
     <!-- Footer -->
     <div class="bottom-menu flex-container space-between align-items">
+      
       <!-- Left content del footer -->
       <div class="left-footer flex-container">
+
         <!-- Icona microfono -->
-        <div class="flex-container column align-items justify-content">
+        <div class="flex-container direction-column align-items justify-content">
           <a href="#" class="icon"><i class="fa-solid fa-microphone"></i></a>
           <span class="icon description">Mute</span>
         </div>
+
         <!-- Selettore opzioni -->
         <div class="selector">
           <a href=""><i class="fa-solid fa-angle-up"></i></a>
         </div>
 
         <!-- Icona webcam -->
-        <div class="flex-container column align-items justify-content">
+        <div class="flex-container direction-column align-items justify-content">
           <a href="#" class="icon"><i class="fa-solid fa-video"></i></a>
           <span class="icon description">Stop video</span>
         </div>
+
         <!-- Selettore opzioni -->
         <div class="selector">
           <a href="#"><i class="fa-solid fa-angle-up"></i></a>
@@ -235,54 +239,56 @@
 
       <!-- Center content del footer -->
       <div class="center-footer flex-container">
+
         <!-- Icona invita -->
-        <div class="icon-container flex-container column align-items justify-content">
+        <div class="icon-container flex-container direction-column align-items justify-content">
           <a href="#" class="icon"><i id="not-center" class="fa-solid fa-user-plus"></i></a>
           <span class="icon description">Invite</span>
         </div>
 
         <!-- Icona partecipanti -->
-        <div class="icon-container flex-container column align-items justify-content">
+        <div class="icon-container flex-container direction-column align-items justify-content">
           <a href="#" class="icon"><i class="fa-solid fa-user-group"></i></a>
           <span class="icon description">Manage participants</span>
         </div>
 
         <!-- Icona sondaggi -->
-        <div class="icon-container flex-container column align-items justify-content">
+        <div class="icon-container flex-container direction-column align-items justify-content">
           <a href="#" class="icon"><i class="fa-solid fa-chart-column"></i></a>
           <span class="icon description">Pooling</span>
         </div>
 
         <!-- Icona condivisione schermo -->
-        <div class="icon-container flex-container column align-items justify-content">
+        <div class="icon-container flex-container direction-column align-items justify-content">
           <a href="#" class="icon"><i id="screen-share" class="fa-solid fa-share-from-square"></i></a>
           <span class="icon description">Share screen</span>
         </div>
+
         <!-- Selettore opzioni -->
         <div class="selector">
           <a href="#"><i class="fa-solid fa-angle-up"></i></a>
         </div>
 
         <!-- Icona commenti -->
-        <div class="icon-container flex-container column align-items justify-content">
+        <div class="icon-container flex-container direction-column align-items justify-content">
           <a href="#" class="icon"><i class="fa-solid fa-comment"></i></a>
           <span class="icon description">Comment</span>
         </div>
 
         <!-- Icona registrazione -->
-        <div class="icon-container flex-container column align-items justify-content">
+        <div class="icon-container flex-container direction-column align-items justify-content">
           <a href="#" class="icon"><i class="fa-solid fa-record-vinyl"></i></a>
           <span class="icon description">Record</span>
         </div>
 
         <!-- Icona "Breakout rooms" -->
-        <div class="icon-container flex-container column align-items justify-content">
+        <div class="icon-container flex-container direction-column align-items justify-content">
           <a href="#" class="icon"><i class="fa-solid fa-table-cells-large"></i></a>
           <span class="icon description">Breakout rooms</span>
         </div>
 
         <!-- Icona "more" -->
-        <div class="icon-container flex-container column align-items justify-content">
+        <div class="icon-container flex-container direction-column align-items justify-content">
           <a href="#" class="icon"><i class="fa-solid fa-ellipsis"></i></a>
           <span class="icon description">More</span>
         </div>
